SERVER-13017 Fix query planner reporting of text index-related errors